src/OpenCvSharpExtern/features.h

#pragma once

#ifndef NO_FEATURES

// ReSharper disable IdentifierTypo
// ReSharper disable CppInconsistentNaming
// ReSharper disable CppNonInlineFunctionDefinitionInHeaderFile

#include "include_opencv.h"


CVAPI(ExceptionStatus) features_drawKeypoints(
    const interop::InputArrayProxy* image,
    cv::KeyPoint *keypoints,
    int keypointsLength,
    const interop::InputOutputArrayProxy* outImage,
    interop::Scalar color,
    int flags)
{
    return cvTry([&] {
        const std::vector<cv::KeyPoint> keypointsVec(keypoints, keypoints + keypointsLength);
        cv::drawKeypoints(InProxy(*image), keypointsVec, IoProxy(*outImage), cpp(color), static_cast<cv::DrawMatchesFlags>(flags));
    });
}


CVAPI(ExceptionStatus) features_drawMatches(
    cv::Mat *img1,
    cv::KeyPoint *keypoints1,
    int keypoints1Length,
    cv::Mat *img2,
    cv::KeyPoint *keypoints2,
    int keypoints2Length,
    cv::DMatch *matches1to2,
    int matches1to2Length,
    cv::Mat *outImg,
    interop::Scalar matchColor,
    interop::Scalar singlePointColor,
    char *matchesMask,
    int matchesMaskLength,
    int flags)
{
    return cvTry([&] {
        const std::vector<cv::KeyPoint> keypoints1Vec(keypoints1, keypoints1 + keypoints1Length);
        const std::vector<cv::KeyPoint> keypoints2Vec(keypoints2, keypoints2 + keypoints2Length);
        const std::vector<cv::DMatch> matches1to2Vec(matches1to2, matches1to2 + matches1to2Length);
        std::vector<char> matchesMaskVec;
        if (matchesMask != nullptr)
            matchesMaskVec = std::vector<char>(matchesMask, matchesMask + matchesMaskLength);
        cv::drawMatches(*img1, keypoints1Vec, *img2, keypoints2Vec, matches1to2Vec, *outImg,
            cpp(matchColor), cpp(singlePointColor), matchesMaskVec, static_cast<cv::DrawMatchesFlags>(flags));
    });
}

CVAPI(ExceptionStatus) features_drawMatchesKnn(
    cv::Mat *img1,
    cv::KeyPoint *keypoints1,
    int keypoints1Length,
    cv::Mat *img2,
    cv::KeyPoint *keypoints2,
    int keypoints2Length,
    cv::DMatch **matches1to2,
    int matches1to2Size1,
    int *matches1to2Size2,
    cv::Mat *outImg,
    interop::Scalar matchColor,
    interop::Scalar singlePointColor,
    char **matchesMask,
    int matchesMaskSize1,
    int *matchesMaskSize2,
    int flags)
{
    return cvTry([&] {
        const std::vector<cv::KeyPoint> keypoints1Vec(keypoints1, keypoints1 + keypoints1Length);
        const std::vector<cv::KeyPoint> keypoints2Vec(keypoints2, keypoints2 + keypoints2Length);
        std::vector<std::vector<cv::DMatch> > matches1to2Vec(matches1to2Size1);
        for (int i = 0; i < matches1to2Size1; i++)
        {
            cv::DMatch *p = matches1to2[i];
            matches1to2Vec[i] = std::vector<cv::DMatch>(p, p + matches1to2Size2[i]);
        }

        std::vector<std::vector<char> > matchesMaskVec;
        if (matchesMask != nullptr)
        {
            matchesMaskVec = std::vector<std::vector<char> >(matchesMaskSize1);
            for (int i = 0; i < matchesMaskSize1; i++)
            {
                char *p = matchesMask[i];
                matchesMaskVec[i] = std::vector<char>(p, p + matchesMaskSize2[i]);
            }
        }

        cv::drawMatches(*img1, keypoints1Vec, *img2, keypoints2Vec, matches1to2Vec,
            *outImg, cpp(matchColor), cpp(singlePointColor), matchesMaskVec, static_cast<cv::DrawMatchesFlags>(flags));
    });
}


CVAPI(ExceptionStatus) features_evaluateFeatureDetector(
    cv::Mat *img1,
    cv::Mat *img2,
    cv::Mat *H1to2,
    std::vector<cv::KeyPoint> *keypoints1,
    std::vector<cv::KeyPoint> *keypoints2,
    float *repeatability,
    int *correspCount/*,
    const Ptr<FeatureDetector>& fdetector = Ptr<FeatureDetector>()*/)
{
    return cvTry([&] {
        cv::evaluateFeatureDetector(
            *img1, *img2, *H1to2, keypoints1, keypoints2,
            *repeatability, *correspCount);
    });
}

CVAPI(ExceptionStatus) features_computeRecallPrecisionCurve(
    cv::DMatch **matches1to2,
    int matches1to2Size1,
    int *matches1to2Size2,
    uchar **correctMatches1to2Mask,
    int correctMatches1to2MaskSize1,
    int *correctMatches1to2MaskSize2,
    std::vector<cv::Point2f> *recallPrecisionCurve)
{
    return cvTry([&] {
        std::vector<std::vector<cv::DMatch> > matches1to2Vec;
        std::vector<std::vector<uchar> > correctMatches1to2MaskVec;
        matches1to2Vec.reserve(matches1to2Size1);
        for (int i = 0; i < matches1to2Size1; i++)
        {
            matches1to2Vec.emplace_back(matches1to2[i], matches1to2[i] + matches1to2Size2[i]);
        }
        correctMatches1to2MaskVec.reserve(correctMatches1to2MaskSize1);
        for (int i = 0; i < correctMatches1to2MaskSize1; i++)
        {
            correctMatches1to2MaskVec.emplace_back(correctMatches1to2Mask[i], correctMatches1to2Mask[i] + correctMatches1to2MaskSize2[i]);
        }
        cv::computeRecallPrecisionCurve(
            matches1to2Vec, correctMatches1to2MaskVec, *recallPrecisionCurve);
    });
}

CVAPI(ExceptionStatus) features_getRecall(
    cv::Point2f *recallPrecisionCurve,
    int recallPrecisionCurveSize,
    float l_precision,
    float *returnValue)
{
    return cvTry([&] {
        const std::vector<cv::Point2f> recallPrecisionCurveVec(
            recallPrecisionCurve, recallPrecisionCurve + recallPrecisionCurveSize);
        *returnValue = cv::getRecall(recallPrecisionCurveVec, l_precision);
    });
}

CVAPI(ExceptionStatus) features_getNearestPoint(
    cv::Point2f *recallPrecisionCurve,
    int recallPrecisionCurveSize,
    float l_precision,
    int *returnValue)
{
    return cvTry([&] {
        const std::vector<cv::Point2f> recallPrecisionCurveVec(
            recallPrecisionCurve, recallPrecisionCurve + recallPrecisionCurveSize);
        *returnValue = cv::getNearestPoint(recallPrecisionCurveVec, l_precision);
    });
}


#pragma region KeyPointsFilter

CVAPI(ExceptionStatus) features_KeyPointsFilter_runByImageBorder(
    std::vector<cv::KeyPoint> *keypoints,
    interop::Size imageSize,
    int borderSize)
{
    return cvTry([&] {
        cv::KeyPointsFilter::runByImageBorder(*keypoints, cpp(imageSize), borderSize);
    });
}

CVAPI(ExceptionStatus) features_KeyPointsFilter_runByKeypointSize(
    std::vector<cv::KeyPoint> *keypoints,
    float minSize,
    float maxSize)
{
    return cvTry([&] {
        cv::KeyPointsFilter::runByKeypointSize(*keypoints, minSize, maxSize);
    });
}

CVAPI(ExceptionStatus) features_KeyPointsFilter_runByPixelsMask(
    std::vector<cv::KeyPoint> *keypoints, cv::Mat *mask)
{
    return cvTry([&] {
        cv::KeyPointsFilter::runByPixelsMask(*keypoints, *mask);
    });
}

CVAPI(ExceptionStatus) features_KeyPointsFilter_runByPixelsMask2VectorPoint(
    std::vector<cv::KeyPoint> *keypoints,
    cv::Point **removeFrom, int removeFromSize1, int *removeFromSize2,
    cv::Mat *mask,
    std::vector<std::vector<cv::Point> > *removeFromResult)
{
    return cvTry([&] {
        std::vector<std::vector<cv::Point> > removeFromVec;
        for (auto i = 0; i < removeFromSize1; i++)
        {
            removeFromVec.emplace_back(removeFrom[i], removeFrom[i] + removeFromSize2[i]);
        }
        cv::KeyPointsFilter::runByPixelsMask2VectorPoint(*keypoints, removeFromVec, *mask);
        *removeFromResult = removeFromVec;
    });
}

CVAPI(ExceptionStatus) features_KeyPointsFilter_removeDuplicated(
    std::vector<cv::KeyPoint> *keypoints)
{
    return cvTry([&] {
        cv::KeyPointsFilter::removeDuplicated(*keypoints);
    });
}

CVAPI(ExceptionStatus) features_KeyPointsFilter_removeDuplicatedSorted(
    std::vector<cv::KeyPoint> *keypoints)
{
    return cvTry([&] {
        cv::KeyPointsFilter::removeDuplicatedSorted(*keypoints);
    });
}

CVAPI(ExceptionStatus) features_KeyPointsFilter_retainBest(
    std::vector<cv::KeyPoint> *keypoints, int nPoints)
{
    return cvTry([&] {
        cv::KeyPointsFilter::retainBest(*keypoints, nPoints);
    });
}

#pragma endregion

#endif // NO_FEATURES